# REX-File-Manager-

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  config.json  readme.md
src/: app.rs  main.rs
src/fs/: navigator.rs
src/ui/: layout.rs
src/utils/: fuzzy.rs  trash.rs
